udagram-infra.yml
Description: > 
    Abdelrahman Ayman / ASU / Udacity
    This template produces the necessary infrastructure in YML format 
    to deploy a highly available webapp using CloudFormation scripts.
    Project 02 : Cloud DevOps NDG

Parameters:
  ProjectName:
    Description: The name of the project we're working on.
    Type: String

  EnvironmentName:
    Description: An environment name that will be prefixed to resource names.
    Type: String

  VpcCIDR: 
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String

  PublicSubnet1CIDR:
    Description: IP range (CIDR notation) for the public subnet in the first availability zone.
    Type: String

  PublicSubnet2CIDR:
    Description: IP range (CIDR notation) for the public subnet in the first availability zone.
    Type: String

  PrivateSubnet1CIDR:
    Description: IP range (CIDR notation) for the private subnet in the first Availability Zone
    Type: String
    
  PrivateSubnet2CIDR:
    Description: IP range (CIDR notation) for the private subnet in the second Availability Zone
    Type: String


Resources:
  VPC: 
      Type: AWS::EC2::VPC 
      Properties:
          CidrBlock: !Ref VpcCIDR
          EnableDnsHostnames: true
          Tags: 
              - 
                Key: ProjectName
                Value: !Ref ProjectName
              - 
                Key: EntityName
                Value: Virtual Private Cloud
              -
                Key: EntityType
                Value: Virtual Private Cloud

  InternetGateway:
      Type: AWS::EC2::InternetGateway
      Properties:
          Tags:
              - 
                Key: ProjectName
                Value: !Ref ProjectName
       
  InternetGatewayAttachment:
      Type: AWS::EC2::VPCGatewayAttachment
      Properties:
          InternetGatewayId: !Ref InternetGateway
          VpcId: !Ref VPC
          
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
        VpcId: !Ref VPC
        AvailabilityZone: !Select [ 0, !GetAZs '' ]
        CidrBlock: !Ref PublicSubnet1CIDR
        MapPublicIpOnLaunch: true
        Tags:
          - Key: Name
            Value: Public Subnet (AZ1)
          - Key: ProjectName
            Value: !Sub ${ProjectName}
        
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
        VpcId: !Ref VPC
        AvailabilityZone: !Select [ 1, !GetAZs '' ]
        CidrBlock: !Ref PublicSubnet2CIDR
        MapPublicIpOnLaunch: true
        Tags:
          - Key: Name
            Value: Public Subnet (AZ2)
          - Key: ProjectName
            Value: !Sub ${ProjectName}

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
        VpcId: !Ref VPC
        AvailabilityZone: !Select [ 0, !GetAZs '' ]
        CidrBlock: !Ref PrivateSubnet1CIDR
        MapPublicIpOnLaunch: false
        Tags:
          - Key: Name
            Value: Private Subnet (AZ1)
          - Key: ProjectName
            Value: !Sub ${ProjectName}

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
        VpcId: !Ref VPC
        AvailabilityZone: !Select [ 1, !GetAZs '' ]
        CidrBlock: !Ref PrivateSubnet2CIDR
        MapPublicIpOnLaunch: false
        Tags:
          - Key: Name
            Value: Private Subnet (AZ2)
          - Key: ProjectName
            Value: !Sub ${ProjectName}

  NatGateway1EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties: 
        Domain: vpc

  NatGateway2EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
        Domain: vpc

  NatGateway1: 
    Type: AWS::EC2::NatGateway
    Properties: 
      AllocationId: !GetAtt NatGateway1EIP.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
          - Key: Name
            Value: NAT Gateway 1
          - Key: ProjectName
            Value: !Sub ${ProjectName}

  NatGateway2: 
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway2EIP.AllocationId
      SubnetId: !Ref PublicSubnet2    
      Tags:
          - Key: Name
            Value: NAT Gateway 2
          - Key: ProjectName
            Value: !Sub ${ProjectName}        
  
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref VPC
      Tags:
          - Key: Name
            Value: Public Route Table
          - Key: ProjectName
            Value: !Sub ${ProjectName}  

  DefaultPublicRoute: 
    Type: AWS::EC2::Route
    Properties: 
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1
  
  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
        RouteTableId: !Ref PublicRouteTable
        SubnetId: !Ref PublicSubnet2

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref VPC
      Tags:
          - Key: Name
            Value: Private Route Table 1
          - Key: ProjectName
            Value: !Sub ${ProjectName}
  
  DefaultPrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref VPC
      Tags:
          - Key: Name
            Value: Private Route Table 2
          - Key: ProjectName
            Value: !Sub ${ProjectName}

  DefaultPrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2
   
  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2

  LBSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP in Load Balancer
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: TCP
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
      - IpProtocol: TCP
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0                                                                                        

  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: EC2 Security Group
      GroupName: EC2-SecurityGroup
      VpcId: !Ref VPC
      SecurityGroupEgress: 
      - IpProtocol: TCP
        FromPort: 0
        ToPort: 65535 
        CidrIp: 0.0.0.0/0
      SecurityGroupIngress: 
      - Description: Inbound rule to allow the Load Balancer.
        IpProtocol: TCP
        SourceSecurityGroupId: !Ref LBSecGroup
        FromPort: 80
        ToPort: 80    
      Tags: 
        - Key: ProjectName
          Value: !Ref ProjectName
        - Key: EntityType
          Value: SecurityGroup

Outputs:
  VPC: 
    Description: A reference to the created VPC
    Value: !Ref VPC
    Export:
      Name: !Sub ${ProjectName}-VPCID          

  PublicSubnets:
    Description: A list of the public subnet IDs
    Value: !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2 ]]
    Export:
      Name: !Sub ${ProjectName}-Public-Subnet-IDs
  
  PublicSubnet1CIDR:
    Description: Public Subnet 1 CIDR
    Value: !Ref PublicSubnet1CIDR
    Export:
      Name: !Sub ${ProjectName}-Public-Subnet-1-CIDR

  PublicSubnet2CIDR:
    Description: Public Subnet 2 CIDR
    Value: !Ref PublicSubnet2CIDR
    Export:
      Name: !Sub ${ProjectName}-Public-Subnet-2-CIDR
  
  PublicSubnet1ID:
    Description: Public Subnet 1 ID
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub ${ProjectName}-Public-Subnet-1-ID
  
  PublicSubnet2ID:
    Description: Public Subnet 2 ID
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub ${ProjectName}-Public-Subnet-2-ID

  PrivateSubnets:
    Description: A list of the private subnet IDs
    Value: !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]]
    Export:
      Name: !Sub ${ProjectName}-Private-Subnet-IDs

  WebServerSecurityGroup:
    Description: Security group to be attached to an EC2 Instance.
    Value: !Ref WebServerSecurityGroup
    Export:
      Name: !Sub ${ProjectName}-WebSecurityGroupID

  LBSecurityGroup:
    Description: Security Group to be attached to the Load Balancer
    Value: !Ref LBSecGroup    
    Export:
      Name: !Sub ${ProjectName}-LBSecurityGroupID
